tests/paczka1/fuzzy1/54602583.err
Error in line 7: mtbQqeqs S680 73,5
Error in line 10: mtbQqeqs A113 21,8
Error in line 2: dNGFIqYTkS A236 43,3
Error in line 28: 5YPPkbYC4 A113 12,0
